[gd_scene load_steps=7 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://Art/5xHeartBar.png" type="Texture" id=2]
[ext_resource path="res://Art/FiraCode-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=1]
size = 62
font_data = ExtResource( 3 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ScoreLabel" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.023
margin_left = -512.0
margin_right = 510.0
margin_bottom = 34.2
custom_fonts/font = SubResource( 3 )
text = "Score: 0"
align = 1
valign = 1

[node name="Healthbar" type="TextureProgress" parent="."]
visible = false
margin_right = 320.0
margin_bottom = 64.0
rect_scale = Vector2( 0.75, 0.75 )
max_value = 5.0
value = 3.0
rounded = true
texture_progress = ExtResource( 2 )

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -76.5
margin_top = 29.0
margin_right = 76.5
margin_bottom = 87.0
custom_fonts/font = SubResource( 2 )
text = "Start Game"

[node name="QuitButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -76.5
margin_top = 112.0
margin_right = 76.5
margin_bottom = 170.0
custom_fonts/font = SubResource( 2 )
text = "Quit Game"

[node name="MessageBanner" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -116.0
margin_right = 512.0
margin_bottom = -34.0
custom_fonts/font = SubResource( 1 )
text = "Space War"
align = 1
valign = 1

[node name="GameOverTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
